# AKOS

./: README.md
life_file/: main.c
life_processes/: CMakeLists.txt  Makefile  a.out  live.c
life_tcp/: Makefile  Makefile~  master.c  worker.c
mapReducer/Manadger/: main.c
mapReducer/Mapper/: mapper.c
mapReducer/mapManager/: mapMeneger.c
mapReducer/reducer/: reducer.c
mapReducer/reducerManager/: ReducerManager.c
mylib/: main.c
mylib/lib/: library.c  library.h
pipeprog/: CMakeLists.txt  main.c
